change pub remove news

--- a/publications.bib
+++ b/publications.bib
@@ -1,6 +1,6 @@
 @article{ma2022design,
   title={Design and implementation of an intelligent assistive cane for visually impaired people based on an edge-cloud collaboration scheme},
-  author={**Ma, Yuqi** and Shi, Yanqing and Zhang, Moyu and Li, Wei and Ma, Chen and Guo, Yu},
+  author={Ma, Yuqi and Shi, Yanqing and Zhang, Moyu and Li, Wei and Ma, Chen and Guo, Yu},
   journal={Electronics},
   volume={11},
   number={14},
